created user-login context and db connection

--- a/Tutorial.UI/appsettings.json
+++ b/Tutorial.UI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "IdentityConnection": "Server=localhost; Database=WebAppDb; User Id=sa; Password=Odb123456789;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
